--- a/fpga/vga.qsf
+++ b/fpga/vga.qsf
@@ -1197,6 +1197,7 @@ set_global_assignment -name ON_CHIP_BITSTREAM_DECOMPRESSION OFF
 set_global_assignment -name CRC_ERROR_OPEN_DRAIN OFF
 
 set_global_assignment -name VERILOG_FILE vga.v
+set_global_assignment -name VERILOG_FILE tile.v
 
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
