--- a/info.yaml
+++ b/info.yaml
@@ -7,6 +7,7 @@ project:
 # Source files must be in ./src and you must list each source file separately
   source_files:
     - tt_um_no_time_for_squares_tommythorn.v
+    - clock.v
     - vga.v
     - tile.v
 # for the future
