--- a/info.yaml
+++ b/info.yaml
@@ -10,8 +10,6 @@ project:
     - clock.v
     - vga.v
     - tile.v
-# for the future
-#   - edgeeqn.v
   top_module:  "tt_um_no_time_for_squares_tommythorn"
 
   # How many tiles your design occupies? A single tile is about 167x108 uM.
@@ -38,12 +36,8 @@ documentation:
       (x,y) coordinate of the "beam" lines on the positive side of
       each line, the beam is inside the triangle.  Among the visible
       triangles, the highest priority triangle sets the color, else we
-      default to a grey color.
-
-      The coordinates of the triangles are stored in a table (didn't
-      have time to implement a CORDIC algorithm) and the render
-      equations are recalculated by a small state machine in the amble
-      time left by the vertical blanking interval.
+      default to a grey color.  Twelve dots are also marked, to make
+      it easier to read the clock.
 
       The algorithm might be easily understood by examining the
       software model in Rust, in the `sw` directory.
@@ -89,4 +83,4 @@ documentation:
   discord:      ".tommythorn"      # Your discord handle, used for communication and automatically assigning tapeout role after a submission
   doc_link:     "TBD"      # URL to longer form documentation, eg the README.md in your repository
   clock_hz:     31500000   # Clock frequency in Hz (if required)
-  picture:      "TBD"      # relative path to a picture in your repository (must be 512kb or less)
+  picture:      "clock.png"      # relative path to a picture in your repository (must be 512kb or less)
